feat: fix 1.18.2